robotic-codes/src/test/test_cstr.txt
test_cstr.cpp: In function ‘int main()’:
test_cstr.cpp:10:3: error: expected ‘;’ before ‘long’
   long int num;
   ^~~~
test_cstr.cpp:12:10: error: ‘num’ was not declared in this scope
   cin >> num
          ^~~
test_cstr.cpp:12:10: note: suggested alternative: ‘enum’
   cin >> num
          ^~~
          enum
